Fixing the nav dropdown on mobile

--- a/sass/layout/nav/_mobile-nav.sass
+++ b/sass/layout/nav/_mobile-nav.sass
@@ -3,7 +3,7 @@
 
   nav
     position: fixed
-    top: -100%
+    top: -100% !important
     left: 0
     width: 100%
     height: 100%
@@ -12,6 +12,9 @@
     padding-top: 50px
     opacity: .97
     transition: all $base-speed ease-out
+
+    &.show
+      top: 0 !important
 
     .top-level
       display: block
